objects/Flight__c/fields/ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Arrival Flights</relationshipLabel>
    <relationshipName>ArrivalFlights</relationshipName>
    <type>Lookup</type>
</CustomField>