objects/Flight__c/fields/DepartureAirport__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Departure Flights</relationshipLabel>
    <relationshipName>DepartureFlights</relationshipName>
    <type>Lookup</type>
</CustomField>