objects/Flight__c/fields/FlightDistance__c.field-meta.xml
<CustomField>
    <fullName>FlightDistance__c</fullName>
    <inlineHelpText>Flight distance in kilometers</inlineHelpText>
    <label>Flight distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>